--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "author": "iftifar.taz@asthait.com",
     "license": "ISC",
     "devDependencies": {
-        "bootstrap": "4.1.3",
-        "chai": "^4.1.2",
+        "bootstrap": "4.3.1",
+        "chai": "^4.2.0",
         "chai-as-promised": "^7.1.1",
-        "chai-bignumber": "^2.0.2",
-        "lite-server": "^2.3.0",
-        "nodemon": "^1.17.3",
-        "truffle": "5.0.2",
-        "truffle-contract": "3.0.6"
+        "chai-bignumber": "^3.0.0",
+        "lite-server": "^2.5.4",
+        "nodemon": "^1.19.4",
+        "truffle": "5.0.41",
+        "@truffle/contract": "4.0.36"
     }
 }
